@@ -1,4 +1,4 @@
-<div class="photoAlbumEntry">
+<article class="article-advice">
   <a tal:define="
       description context/Description|string:;
       title context/pretty_title_or_id|string:;
@@ -15,26 +15,29 @@
      tal:attributes="href string:${url}/download;
                      id python: 'att_%s' % uid;
                      title description">
-      <i class="flaticon-pdf17"></i><br/>
-      <span tal:condition="position|nothing">
-        Bijlage <span tal:replace="position" />:
-      </span>
-
-    <h4 tal:content="context/pretty_title_or_id|string:">Title</h4>
-    <span class="discreet">
-      <span tal:replace="contenttype">ContentType</span>,
-      <tal:size content="size">0Kb</tal:size>
+    <div class="icon"><i class="flaticon-pdf17"></i></div>
+    <span tal:condition="position|nothing">
+      Bijlage <span tal:replace="position" />:
     </span>
-    <p class="label">
-      Bestand
-      <span tal:content="context/getThemeTitle|nothing"></span>
-    </p>
-    <span class="photoAlbumEntryDescription" tal:content="description">Description</span>
 
-    <time datetime="2015-11-25 9:30"
-          tal:condition="python:time is not None"
-          tal:attributes="datetime python:time.strftime('%Y-%m-%d')"
-          tal:content="python:toLocalizedTime(time, long_format=0)">26 11 2015 9:30</time>
+    <div class="body">
+      <header>
+      <h3 tal:content="context/pretty_title_or_id|string:">Title</h3>
+      </header>
+      <span class="discreet">
+        <span tal:replace="contenttype">ContentType</span>,
+        <tal:size content="size">0Kb</tal:size>
+      </span>
+      <p class="label">
+        Bestand
+        <span tal:content="context/getThemeTitle|nothing"></span>
+      </p>
+      <span class="photoAlbumEntryDescription" tal:content="description">Description</span>
 
+      <time datetime="2015-11-25 9:30"
+            tal:condition="python:time is not None"
+            tal:attributes="datetime python:time.strftime('%Y-%m-%d')"
+            tal:content="python:toLocalizedTime(time, long_format=0)">26 11 2015 9:30</time>
+    </div>
   </a>
-</div>
+</article>
